--- a/static/generator.css
+++ b/static/generator.css
@@ -13,6 +13,7 @@
 	src: url('fonts/GillSansStd.otf');
 }
 
+.ui-page-active { outline: none; }
 
 body {
   background: #eef1f3;
@@ -52,4 +53,44 @@ h3 {
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+/* Upper progress bar */
+
+
+.progress-wrapper {
+	margin: 3vh 2vw 0vh 2vw;
+}
+
+.progress-bar {
+  border-radius: 60px;
+  overflow: hidden;
+  height: 100%;
+}
+
+.progress-bar span {
+  display: block;
+}
+
+.bar {
+  background: rgba(0, 0, 0, 0.075);
+}
+
+.progress {
+  background: #75b800;
+  color: #fff;
+  height: 2vh;
+  width: 0%;
+}
+
+body {
+	text-align: center;
+}
+
+.progress-text {
+	position: absolute;
+	top: 3.2vh;
+	font-size: 1.4vh;
+	color: white;
+	text-shadow: 0.07vh 0 0 #000, 0 -0.07vh 0 #000, 0 0.07vh 0 #000, -0.07vh 0 0 #000;
 }
